fix(menu): stretch menu list container to fit all items (#5589)

--- a/src/standalone/styles/topbar.less
+++ b/src/standalone/styles/topbar.less
@@ -47,7 +47,7 @@
     flex-wrap: wrap;
     max-width: 800px;
     .dd-menu-items {
-      width: 700px;
+      width: max-content;
       .dd-items-left {
         display: flex;
         flex-direction: column;
